- [MINOR] Implement cert loader for both multiple and legacy WPJ data store in PKeyAuth (#1711)
- [PATCH] Fix SDK Cancel when using authorization in current task (#1743)
- [MINOR] Added support for broadcasting to applications installed on the device. (#1744)
- [PATCH] Fix APPLICATION_CANCELLED by handling back button press (#1725)

Version 4.1.0
----------
- [PATCH] Add null check to avoid NPE when checking for AccountTypesWithManagementDisabled (#1713)
- [MINOR] Add prompt=create support. (#1707)
- [PATCH] Clears client cert preferences so that multiple CBA login attempts can be completed in same session (#1688)
- [PATCH] Fixing potential deadlock state in executor service for interactive requests (#1696)
- [PATCH] Ensure consistent logging tags (#1701)
- [PATCH] Update gson version to 2.8.9 (#1694)
- [PATCH] Fix silent flow pkeyauth, add build param to disable silent flow timeout during debugging (#1687)
- [MINOR] Hook telemetry to LocalAuthenticationResult and BaseException (#1636)
- [PATCH] Fix accidental code change that disabled PoP for auth code grant flow (#1661)
- [MINOR] Add flighting parameters to commmandParameters (#1562)
- [MINOR] Add ropc command and ropc flow to BaseController (#1539)
- [PATCH] Move to commitNow() instead of commit() when removing authorization fragment from provided fragment manager.  Add exception handling/logging.  (#1695851)

Version 4.0.5
----------
- [PATCH] Ensure a device pop manager is provided when PoPAuthenticationScheme is requested of the broker (#1706)
- [MAJOR] Move IKeyStoreKeyManager and IDevicePopManager to common4j (#1683)

Version 4.0.4
----------
- [PATCH] Adding orientation flag to BrokerActivity android:configChanges to prevent it from getting restarted on orientation change (#1705)
- [PATCH] Correct setAttestationChallenge to provide null rather than empty byte array (#1700)

Version 4.0.3
----------
- [PATCH] Use default provider in Android for creating SSLContext's KeyManagerFactory (#1697, #1698)
