@@ -25,6 +25,8 @@ package com.microsoft.identity.common.internal.providers.oauth2;
 import com.microsoft.identity.common.java.providers.oauth2.DefaultStateGenerator;
 import com.microsoft.identity.common.logging.Logger;
 
+import java.util.Locale;
+
 import lombok.Getter;
 import lombok.NonNull;
 
@@ -51,7 +53,8 @@ public class AndroidTaskStateGenerator extends DefaultStateGenerator {
     @NonNull
     public String generate() {
         String state = super.generate();
-        state = String.format("%d%s%s", this.taskId, SPLITTER, state);
+        // Ensure the string is formatted in only one Locale. Using Locale.US ensures the taskId is always ASCII which is URL safe.
+        state = String.format(Locale.US, "%d%s%s", this.taskId, SPLITTER, state);
         return state;
     }
 
