@@ -72,7 +72,7 @@ public class MicrosoftAuthorizationResponse extends AuthorizationResponse {
      * Constructor of {@link MicrosoftAuthorizationResponse}.
      *
      * @param code  The authorization code generated by the authorization server.
-     * @param state "state" parameter from the client authorization request.
+     * @param state The Base64 encoded "state" parameter from the client authorization request.
      */
     public MicrosoftAuthorizationResponse(String code, String state) {
         super(code, state);
