@@ -34,7 +34,7 @@ public class AzureActiveDirectoryAuthorizationResponse extends MicrosoftAuthoriz
      * Constructor of {@link AzureActiveDirectoryAuthorizationResponse}.
      *
      * @param code  The authorization code generated by the authorization server.
-     * @param state "state" parameter from the client authorization request.
+     * @param state The Base64 "state" parameter from the client authorization request.
      */
     public AzureActiveDirectoryAuthorizationResponse(final String code, final String state) {
         super(code, state);
