@@ -36,7 +36,7 @@ public class MicrosoftStsAuthorizationResponse extends MicrosoftAuthorizationRes
      * Constructor of {@link MicrosoftStsAuthorizationResponse}.
      *
      * @param code  The authorization code generated by the authorization server.
-     * @param state "state" parameter from the client authorization request.
+     * @param state The Base64 "state" parameter from the client authorization request.
      */
     public MicrosoftStsAuthorizationResponse(final String code, final String state, final Map<String, String> otherParameters) {
         super(code, state);
