@@ -23,6 +23,7 @@
 package com.microsoft.identity.common.java.providers.oauth2;
 
 import com.google.gson.annotations.Expose;
+import com.microsoft.identity.common.java.util.StringUtil;
 
 import java.util.Map;
 
@@ -46,7 +47,7 @@ public class AuthorizationResponse implements ISuccessResponse {
      * revoke (when possible) all tokens previously issued based on
      * that authorization code. The authorization code is bound to
      * the client identifier and redirection URI.
-     *
+     * <p>
      * NULLABLE for device code flow. Device code authorization does not generate this field.
      */
     private String mCode;
@@ -77,11 +78,11 @@ public class AuthorizationResponse implements ISuccessResponse {
      * Constructor of {@link AuthorizationResponse}.
      *
      * @param code  The authorization code generated by the authorization server.
-     * @param state "state" parameter from the client authorization request.
+     * @param state The Base64 encoded "state" parameter from the client authorization request.
      */
     public AuthorizationResponse(final String code, final String state) {
         mCode = code;
-        mState = state;
+        mState = StringUtil.isNullOrEmpty(state) ? state : StringUtil.decodeUrlSafeString(state);
     }
 
     /**
